Updating Folders structure

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Someone reported a in production after deployment & boss is angry? No problem, We Got Ya!">
     <link rel="me" href="https://twitter.com/MohammedAlaa">
     <link rel="stylesheet" href="src/css/style.css">
+    <link rel="canonical" href="https://egyptian-geeks.github.io/geekyanswers">
 
     <style media="">
       html, body {
