addig facebook graph

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="canonical" href="https://egyptian-geeks.github.io/geekyanswers">
 
+    <meta property="og:url"          content="https://egyptian-geeks.github.io/geekyanswers" />
+    <meta property="og:type"         content="article" />
+    <meta property="og:title"        content="Someone reported a bug?" />
+    <meta property="og:description"  content="boss is angry? No problem, We Got Ya!" />
+    <meta property="og:image"        content="https://egyptian-geeks.github.io/geekyanswers/src/images/fb-cover.png" />
+    <meta property="og:locale"       content="en_US" />
+
     <style media="">
       html, body {
         width: 100%;
