updating fb cover

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <meta name="description" content="Someone reported a in production after deployment & boss is angry? No problem, We Got Ya!">
     <link rel="me" href="https://twitter.com/MohammedAlaa">
     <link rel="stylesheet" href="src/css/style.css">
-    <link rel="canonical" href="https://egyptian-geeks.github.io/geekyanswers">
+    <link rel="canonical" href="https://egyptian-geeks.github.io/geekyanswers/">
 
-    <meta property="og:url"          content="https://egyptian-geeks.github.io/geekyanswers" />
+    <meta property="og:url"          content="https://egyptian-geeks.github.io/geekyanswers/" />
     <meta property="og:type"         content="article" />
     <meta property="og:title"        content="Someone reported a bug?" />
     <meta property="og:description"  content="boss is angry? No problem, We Got Ya!" />
     <meta property="og:image"        content="https://egyptian-geeks.github.io/geekyanswers/src/images/fb-cover.png" />
     <meta property="og:locale"       content="en_US" />
 
-    <style media="">
+    <style>
       html, body {
         width: 100%;
         height: 100%;
