--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <meta property="og:title"        content="Someone reported a bug?" />
     <meta property="og:description"  content="boss is angry? No problem, We Got Ya!" />
     <meta property="og:image"        content="https://egyptian-geeks.github.io/geekyanswers/src/images/fb-cover.png" />
+    <meta property="og:image:width"  content="1080" />
+    <meta property="og:image:height" content="1080" />
     <meta property="og:locale"       content="en_US" />
 
     <style>
