--- a/index.html
+++ b/index.html
@@ -155,6 +155,16 @@
         justify-content: space-between!important;
       }
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-41745239-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-41745239-3');
+    </script>
+
     <script type="text/javascript">
       function shuffle(array) {
         var currentIndex = array.length, temporaryValue, randomIndex;
@@ -220,7 +230,7 @@
             <p class="responsive_headline">You must have the wrong version!</p>
           </div>
           <div class="d-flex justify-content-between box-footer">
-            <a href="https://www.facebook.com/groups/egyptian.geeks/" target="_blank">@EgyptianGeeks</a>
+            <a href="https://www.facebook.com/groups/egyptian.geeks/" target="_blank" onclick="gtag('event', 'lead', {'event_category' : 'engagement','event_label' : 'EgyptianGeeks'});">@EgyptianGeeks</a>
             <a class="twitter-share-button"
               href="https://twitter.com/intent/tweet?text=You must have the wrong version!&via=MohammedAlaa&hashtags=GeekyAnswers">
               <svg style="width:24px;height:24px" viewBox="0 0 24 24">
@@ -231,13 +241,26 @@
         </div>
         <div class="options text-center">
           Please refresh to see more answers!
-          <p><a class="btn" href="https://twitter.com/intent/tweet?screen_name=MohammedAlaa&amp;text=Please%20add%20%22GEEKYEXECUSE%22%20to%20GeekyAnswers" data-related="MohammedAlaa,MohammedAlaa">Feeling lucky!</a></p>
+          <p><a class="btn"
+            href="https://twitter.com/intent/tweet?screen_name=MohammedAlaa&amp;text=Please%20add%20%22GEEKYEXECUSE%22%20to%20GeekyAnswers"
+            onclick="gtag('event', 'insert', {'event_category' : 'engagement','event_label' : 'twitter'});"
+            data-related="MohammedAlaa,MohammedAlaa">Feeling lucky!</a></p>
         </div>
       </div>
     </section>
 
     <script src="src/js/fittext.js"></script>
     <script type="text/javascript">
+
+      var item = document.querySelector('.responsive_headline');
+      var answer = shuffle(arr)[0];
+      var tweet_btn = document.querySelector('.twitter-share-button');
+      item.innerText = answer;
+
+      tweet_btn.href = "https://twitter.com/intent/tweet?text="+ encodeURI(answer) +"&via=MohammedAlaa&hashtags=GeekyAnswers";
+
+      fitText(document.querySelector(".responsive_headline"), 0.9);
+
       (function() {
         if (window.__twitterIntentHandler) return;
         var intentRegex = /twitter\.com\/intent\/(\w+)/,
@@ -266,6 +289,8 @@
                 top = Math.round((winHeight / 2) - (height / 2));
               }
 
+              gtag('event', 'share', { method : 'Twitter' });
+
               window.open(target.href, 'intent', windowOptions + ',width=' + width +
                                                  ',height=' + height + ',left=' + left + ',top=' + top);
               e.returnValue = false;
@@ -281,15 +306,6 @@
         }
         window.__twitterIntentHandler = true;
       }());
-
-      var item = document.querySelector('.responsive_headline');
-      var answer = shuffle(arr)[0];
-      var tweet_btn = document.querySelector('.twitter-share-button');
-      item.innerText = answer;
-
-      tweet_btn.href = "https://twitter.com/intent/tweet?text="+ encodeURI(answer) +"&via=MohammedAlaa&hashtags=GeekyAnswers";
-
-      fitText(document.querySelector(".responsive_headline"), 0.9);
     </script>
   </body>
 </html>
